<resources>
    <string name="app_name">Todo app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_new_task">Enter New Task</string>
    <string name="add_task">Add Task</string>
    <string name="delete_tasks">Delete tasks</string>
    <string name="task_name">Task Name</string>
    <string name="profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="get_joke">Get Joke</string>
    <string name="jokes">Jokes :</string>
    <string name="card_image">Card Image</string>
    <string name="card_title">Card Title</string>
    <string name="this_is_a_sample_card_description">This is a sample card description.</string>
    <string name="add_to_card">Add to card</string>
    <string name="checkout">Checkout</string>
    <string name="view_cart">View Cart</string>
    <string name="to_do_list">To Do List</string>
    <string name="news">News</string>
    <string name="technology_news">Technology News</string>
    <string name="science_news">Science News</string>
    <string name="health_news">Health News</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="technology">Technology</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="duet_gate_gazipur">DUET gate, Gazipur</string>
    <string name="passionate_android_developer">Passionate Android Developer!</string>
    <string name="_8801883646206">+8801883646206</string>
    <string name="dinar">Dinar</string>
    <string name="dinarmridha_gmail_com">Dinarmridha@gmail.com</string>
    <string name="upload_image">Upload Image</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="profession">Profession</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
</resources>