<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/to_do_list"
        android:title="@string/to_do_list" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/newspaper"
        android:title="@string/news" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/profile" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/grocery_store"
        android:title="@string/view_cart" />



</menu>