<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.profile.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Image Upload -->
        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/user"
            android:scaleType="centerCrop"
            android:padding="4dp"/>

        <Button
            android:id="@+id/btnUploadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_image"
            android:layout_marginTop="8dp"/>

        <!-- First Name -->
        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:layout_marginTop="12dp"/>

        <!-- Last Name -->
        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="12dp"

            android:layout_marginTop="12dp"/>

        <!-- Phone Number -->
        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="12dp"

            android:layout_marginTop="12dp"/>

        <!-- Address -->
        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="12dp"

            android:layout_marginTop="12dp"/>

        <!-- Profession -->
        <EditText
            android:id="@+id/etProfession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profession"
            android:inputType="textPersonName"
            android:padding="12dp"

            android:layout_marginTop="12dp"/>

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/purple_500"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"/>

        <!-- Back Button -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

</ScrollView>
